assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
	.v-container {
		@apply px-6 pt-10 pb-6
	}

	@media only screen and (min-width: 768px) {
		.v-container {
			@apply px-10 pt-20 pb-14
		}
	}

	@media only screen and (min-width: 1199px) {
		.v-container {
			@apply px-32
		}
	}
}

.page-enter-active,
.page-leave-active {
	transition: all 0.4s;
}
.page-enter-from,
.page-leave-to {
	opacity: 0;
	filter: blur(1rem);
}

